Ajax para formulario

--- a/index.html
+++ b/index.html
@@ -595,8 +595,8 @@
                             <h4>Mantente en Contacto<span class="head-line"></span></h4>
                             <p>Únete a nuestra lista de correo para estar al día y obtener avisos sobre nuestros nuevos lanzamientos</p>
                             <form class="subscribe">
-                                <input type="text" placeholder="mailto:example@example.com">
-                                <input type="submit" class="main-button" value="Enviar">
+                                <input type="text" placeholder="mailto:example@example.com" name="email">
+                                <input id="enviarCorreoButton" type="submit" class="main-button" value="Enviar" data-loading-text="Enviando...">
                             </form>
                         </div>
                         <div class="footer-widget social-widget">
@@ -712,7 +712,7 @@
     
 
 </body>
-
+<script type="text/javascript" src="js/scriptFormularios.js"></script>
 
 <!-- Mirrored from sineti.com/nuevo2015/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 30 Apr 2015 16:31:26 GMT -->
 </html>
