Cambio project net

--- a/project-net.html
+++ b/project-net.html
@@ -221,8 +221,8 @@
                              <h4>Mantente en Contacto<span class="head-line"></span></h4>
                             <p>Únete a nuestra lista de correo para estar al día y obtener avisos sobre nuestros nuevos lanzamientos</p>
                             <form class="subscribe">
-                                <input type="text" placeholder="mailto:example@example.com">
-                                <input type="submit" class="main-button" value="Enviar">
+                                <input type="email" placeholder="mailto:example@example.com" name="email" id="email" required maxlength="100">
+                                <input id="enviarCorreoButton" type="submit" class="main-button" value="Enviar">
                             </form>
                         </div>
                         <div class="footer-widget social-widget">
