--- a/contacto.html
+++ b/contacto.html
@@ -276,7 +276,7 @@
 							<div class="col-md-12">
 								<label for="mensaje">Mensaje</label>
 								<span class="message-missing">Ingresa tu Mensaje!</span>
-								<textarea id="mensaje" name="mensaje" cols="45" rows="10" maxlength="1000"></textarea>
+								<textarea id="mensaje" name="mensaje" cols="45" rows="10" maxlength="1000" placeholder="En qué podemos ayudarte...."></textarea>
 								<input type="submit" name="submit" class="button" id="submit_btn" value="Enviar Información">
 							</div>
 						</div>
